# sparko_graphql

./: Cargo.toml  README.md
src/: error.rs  lib.rs  traits.rs  types.rs
src/types/: boolean.rs  date.rs  datetime.rs  float.rs  id.rs  int.rs  page_info.rs
